demo-apps/todo-app/deployment/openshift/todo-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-api-route
  labels: 
    app: todo-api
spec:
  subdomain: todo-api-dev
  tls:
    termination: edge
  to:
    kind: Service
    name: todo-api-service
---
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  labels: 
    app: todo-api
spec:
  selector:
    app: todo-api
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
  labels:
    app: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api-container
        image: imanjamali/todo-api:latest
        ports:
          - containerPort: 5001
